--- a/README
+++ b/README
@@ -12,8 +12,8 @@ DOWNLOAD : stable_d / Default
 
 -----------------------------------
 
-stable_d : This is the DEFAULT version of the Boeing 787-8 Dreamliner containing EFB and FMC database files for selected airports only. That reduces the file size, but is still bigger than the 'stable_e' release.
+stable_e : This version contains only the basic aircraft, with model, systems and instruments. The EFB and FMC databases are empty to reduce file sizes. Only recommended for slow internet connections.
 
-> stable_e : This version contains only the basic aircraft, with model, systems and instruments. The EFB and FMC databases are empty to reduce file sizes. Only recommended for slow internet connections.
+> stable_d : This is the DEFAULT version of the Boeing 787-8 Dreamliner containing EFB and FMC database files for selected airports only. That reduces the file size, but is still bigger than the 'stable_e' release.
 
 > stable_f : This version contains the default diagrams and charts in the EFB Database and ALL available airports' navdata in the FMC Database. (3808 airports) Download this only if you have a good internet connection. WARNING: OVER 280 MB!
